refactor: rename to mcp-tailscale for consistency
- Renamed directory from tailscale-mcp to mcp-tailscale
- Updated package name to @jchristian/mcp-tailscale
- Updated server name in MCP server config
- Updated bin command name
- Updated all documentation references
- Added CHANGELOG.md

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@jchristian/tailscale-mcp",
+  "name": "@jchristian/mcp-tailscale",
   "version": "0.1.0",
   "description": "MCP server for Tailscale API - manage devices, check status, and configure your tailnet",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "tailscale-mcp": "dist/index.js"
+    "mcp-tailscale": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
