docs: standardize repository for npm publishing
- Add npm and license badges to README
- Add Contributing, Changelog, and Links sections
- Update package.json with repository, bugs, and homepage URLs
- Add author website URL
- Prepare for public release

--- a/package.json
+++ b/package.json
@@ -20,8 +20,19 @@
     "claude",
     "ai"
   ],
-  "author": "Jim Christian",
+  "author": {
+    "name": "Jim Christian",
+    "url": "https://jimchristian.net"
+  },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jchristian/mcp-tailscale.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jchristian/mcp-tailscale/issues"
+  },
+  "homepage": "https://github.com/jchristian/mcp-tailscale#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4"
   },
